--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,10 +4,10 @@
       <ul>CLINTON ENYINNA</ul>
     </nav>
     <main class="col-sm-10 p-0">
-      <nav class="navbar navbar-expand-lg navbar-light bg-primary p-3">
+      <nav class="navbar navbar-expand navbar-light bg-primary p-3">
         <div class="collapse navbar-collapse d-flex justify-content-end">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#">Home</a>
+            <%= link_to 'LOG OUT', logout_path, method: :delete, class: 'nav-item nav-link text-white' %>
           </div>
         </div>
       </nav>
