--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row">
+  <div class="row" style="min-height: calc(100vh - 72px);">
     <nav class="col-2 border-right">
       <div class="row">
         <div class="col-6">
@@ -17,7 +17,7 @@
       </ul>
     </nav>
     <main class="col-sm-7 p-0 bg-light border-right">
-      <nav class="navbar navbar-expand-lg navbar-light px-0 py-3">
+      <nav class="navbar navbar-expand navbar-light px-0 py-3">
         <div class="collapse navbar-collapse border-bottom">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">TWEETS</a>
@@ -26,7 +26,7 @@
       </nav>
       <div>
         <div class="container">
-          <div class="bg-white rounded">
+          <div class="bg-white border rounded">
             <h6 class="p-3 m-0 text-muted">TWEET SOMETHING</h6>
               <%= form_for(:opinion, url: opinions_path, html: {class: 'px-3 pb-3'}) do |f| %>
                 <div class="form-group">
@@ -34,8 +34,8 @@
                 </div> 
               <% end %>
           </div>
-          <div class="bg-white rounded px-3 py-4 mt-5 mb-5">
-            <h6 class="p-3 mb-3 border-bottom text-primary"><%= @opinions.count%> NEW TWEETS</h6>
+          <div class="bg-white border rounded px-3 py-4 mt-5 mb-5">
+            <h6 class="pb-3 border-bottom text-primary">RECENT TWEETS</h6>
             <% @opinions.each do |opinion| %>
               <h6 class="text-black font-weight-bold mb-0"><%= opinion.user.fullname %></h6>
               <p class=""><%= opinion.text %></p>
@@ -45,12 +45,17 @@
       </div>
     </main>
     <aside class="col-sm-3 bg-light">
-      <div class="navbar navbar-expand-lg navbar-light px-0 py-3">
+      <div class="navbar navbar-expand navbar-light px-0 py-3">
         <div class="collapse navbar-collapse border-bottom">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">WHO TO FOLLOW</a>
           </div>
         </div>
+      </div>
+      <div class="container">
+        <% @users.each do |user| %>
+          <%= link_to user.fullname %>
+        <% end %>
       </div>
     </aside>
   </div>
