--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,13 @@
 <div class="container-fluid">
   <div class="row">
-    <nav class="col-sm-2 bg-secondary">
-      <ul>CLINTON ENYINNA</ul>
+    <nav class="col-sm-2 bg-blue b-bottom">
+      <ul><%= current_user.fullname.upcase! if current_user%></ul>
     </nav>
     <main class="col-sm-10 p-0">
-      <nav class="navbar navbar-expand navbar-light bg-primary p-3">
+      <nav class="navbar navbar-expand navbar-light bg-light-blue p-3">
         <div class="collapse navbar-collapse d-flex justify-content-end">
           <div class="navbar-nav">
-            <%= link_to 'LOG OUT', logout_path, method: :delete, class: 'nav-item nav-link text-white' %>
+            <%= link_to 'LOG OUT', logout_path, method: :delete, class: 'nav-item nav-link text-dark' %>
           </div>
         </div>
       </nav>
