--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -3,11 +3,11 @@
     <div class="col-sm-2 b-right bg-blue">
       <div class="row text-center b-bottom">
         <div class="col-sm-6 py-2 b-right">
-          <div class="text-white"><%=current_user.followees.count%></div>
+          <div class="text-white"><%=current_user.followees.count if current_user%></div>
           <h6 class="text-secondary text-small">Following</h6>
         </div>
         <div class="col-sm-6 py-2">
-          <div class="text-white"><%=current_user.followers.count%></div>
+          <div class="text-white"><%=current_user.followers.count if current_user%></div>
           <h6 class="text-secondary text-small">Followers</h6>
         </div>
       </div>
@@ -44,7 +44,7 @@
               <div class="card mb-3 border-0">
                 <div class="row no-gutters">
                   <div class="col-3 col-lg-1">
-                    <img src="..." class="card-img" alt="...">
+                    <%= image_tag(current_user.image) if current_user.image %>
                   </div>
                   <div class="col-9 col-lg-11">
                     <div class="card-body py-0">
