--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,11 +3,11 @@
     <div class="col-sm-2 b-right bg-blue">
       <div class="row text-center b-bottom">
         <div class="col-sm-6 py-2 b-right">
-          <div class="text-white"><%=current_user.followees.count%></div>
+          <div class="text-white"><%=current_user.followees.count if current_user%></div>
           <h6 class="text-secondary text-small">Following</h6>
         </div>
         <div class="col-sm-6 py-2">
-          <div class="text-white"><%=current_user.followers.count%></div>
+          <div class="text-white"><%=current_user.followers.count if current_user%></div>
           <h6 class="text-secondary text-small">Followers</h6>
         </div>
       </div>
@@ -26,7 +26,7 @@
     </div>
     <main class="col-sm-7 p-0 bg-light border-right">
       <div class="cover">
-        <img src="..." class="card-img" alt="...">
+        <%= image_tag(current_user.image) if current_user.image %>
       </div>
       <nav class="nav px-5 mb-5 main-nav border-bottom d-flex align-items-center">
         <%= link_to 'TWEETS', root_path, class: 'nav-link active text-dark px-0' %>
@@ -47,7 +47,7 @@
               <div class="card mb-3 border-0">
                 <div class="row no-gutters">
                   <div class="col-3 col-lg-1">
-                    <img src="..." class="card-img" alt="...">
+                    <%= image_tag(current_user.image) if current_user.image %>
                   </div>
                   <div class="col-9 col-lg-11">
                     <div class="card-body py-0">
@@ -63,9 +63,13 @@
       </div>
     </main class="col-sm-7">
     <aside class="col-sm-3 bg-light">
-      <div class="main-nav border-bottom d-flex align-items-center">
+      <div class="">
         <div class="">
-          <a class="text-muted" href="#">WHO TO FOLLOW</a>
+        <%= image_tag(current_user.image) if current_user.image %>
+        </div>
+        <div class="">
+          <%= current_user.fullname %>
+          <%= current_user.username %>
         </div>
       </div>
       <div class="container">
