--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -44,7 +44,7 @@
               <div class="card mb-3 border-0">
                 <div class="row no-gutters">
                   <div class="col-3 col-lg-1">
-                    <%= image_tag(current_user.image) if current_user.image %>
+                    <%= image_tag(current_user.thumbnail) if current_user.image %>
                   </div>
                   <div class="col-9 col-lg-11">
                     <div class="card-body py-0">
