--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,7 +26,7 @@
     </div>
     <main class="col-sm-7 p-0 bg-light border-right">
       <div class="cover">
-        <%= image_tag(current_user.image) if current_user.image %>
+        <%= image_tag(current_user.cover) if current_user.image %>
       </div>
       <nav class="nav px-5 mb-5 main-nav border-bottom d-flex align-items-center">
         <%= link_to 'TWEETS', root_path, class: 'nav-link active text-dark px-0' %>
@@ -47,7 +47,7 @@
               <div class="card mb-3 border-0">
                 <div class="row no-gutters">
                   <div class="col-3 col-lg-1">
-                    <%= image_tag(current_user.image) if current_user.image %>
+                    <%= image_tag(current_user.thumbnail) if current_user.image %>
                   </div>
                   <div class="col-9 col-lg-11">
                     <div class="card-body py-0">
@@ -65,7 +65,7 @@
     <aside class="col-sm-3 bg-light">
       <div class="">
         <div class="">
-        <%= image_tag(current_user.image) if current_user.image %>
+        <%= image_tag(current_user.profile) if current_user.image %>
         </div>
         <div class="">
           <%= current_user.fullname %>
