--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -44,10 +44,10 @@
               <div class="card mb-3 border-0">
                 <div class="row no-gutters">
                   <div class="col-3 col-lg-1">
-                    <%= image_tag(current_user.thumbnail) if current_user.image %>
+                    <%= image_tag(opinion.user.thumbnail, class: 'thumbnail')%>
                   </div>
                   <div class="col-9 col-lg-11">
-                    <div class="card-body py-0">
+                    <div class="card-body py-0 px-3">
                       <h6 class="card-title mb-0"><%= opinion.user.fullname %></h6>
                       <p class="card-text text-muted"><%= opinion.text %></p>
                     </div>
@@ -65,10 +65,21 @@
           <a class="text-muted" href="#">WHO TO FOLLOW</a>
         </div>
       </div>
-      <div class="container">
+      <div class="container py-4">
         <% @users.each do |user| %>
-          <%= link_to user.fullname, user_path(user) %>
-          </br>
+          <div class="card mb-4 border-0 bg-transparent">
+              <div class="row no-gutters">
+                <div class="col-sm-2">
+                  <%= image_tag(user.thumbnail, class: 'side-thumbnail') %>
+                </div>
+                <div class="col-sm-10">
+                  <div class="card-body py-3 px-4">
+                    <h6 class="card-title mb-0"><%= link_to user.fullname, user_path(user) %></h6>
+                    <small class="text-muted">Followed by</small>
+                  </div>
+                </div>
+              </div>
+          </div>
         <% end %>
       </div>
     </aside>
