--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -20,7 +20,7 @@
 
 .active{
     height: inherit;
-    line-height: 65px;
+    line-height: 63px;
     border-bottom: 2px solid rgb(32, 32, 83);
 }
 
@@ -51,6 +51,10 @@ li a{
   height: 400px;
 }
 
+.cover-img{
+  width: 100%;
+}
+
 .dropdown-link{
     color: black;
 }
@@ -70,4 +74,12 @@ li a{
     border-radius: 50%;
     border: 1px solid #ddd;
     object-fit: contain;
+}
+
+.header-thumbnail {
+    border-radius: 4px;
+    border: 1px solid black;
+    padding: 3px;
+    width: 70px;
+    height: 52px;
 }
