--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,21 @@
 <div class="container-fluid">
   <div class="row">
-    <nav class="col-sm-2 bg-blue b-bottom">
-      <ul><%= current_user.fullname.upcase! if current_user%></ul>
+    <nav class="col-sm-2 bg-blue b-bottom py-2">
+      <div class="card border-0 bg-transparent">
+        <div class="row no-gutters">
+          <div class="col-sm-4 text-center">
+            <%= image_tag(current_user.thumbnail, class: 'header-thumbnail') if current_user %>
+          </div>
+          <div class="col-sm-8 d-flex align-items-center">
+            <div class="card-body py-0 px-0">
+              <h6 class="card-title mb-0 text-white"><%= current_user.fullname.upcase! if current_user %></h6>
+            </div>
+          </div>
+        </div>
+      </div>
     </nav>
-    <main class="col-sm-10 p-0">
-      <nav class="navbar navbar-expand navbar-light bg-light-blue p-3">
+    <main class="col-sm-10 p-0 py-2 bg-light-blue">
+      <nav class="navbar navbar-expand navbar-light p-3">
         <div class="collapse navbar-collapse d-flex justify-content-end">
           <ul class="navbar-nav">
             <% if current_user %>
