--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -67,19 +67,21 @@
       </div>
       <div class="container py-4">
         <% @users.each do |user| %>
-          <div class="card mb-4 border-0 bg-transparent">
-              <div class="row no-gutters">
-                <div class="col-sm-2">
-                  <%= image_tag(user.thumbnail, class: 'side-thumbnail') %>
-                </div>
-                <div class="col-sm-10">
-                  <div class="card-body py-3 px-4">
-                    <h6 class="card-title mb-0"><%= link_to user.fullname, user_path(user) %></h6>
-                    <small class="text-muted">Followed by</small>
+          <% unless current_user == user %>
+            <div class="card mb-4 border-0 bg-transparent">
+                <div class="row no-gutters">
+                  <div class="col-sm-2">
+                    <%= image_tag(user.thumbnail, class: 'side-thumbnail') %>
+                  </div>
+                  <div class="col-sm-10">
+                    <div class="card-body py-3 px-4">
+                      <h6 class="card-title mb-0"><%= link_to user.fullname, user_path(user) %></h6>
+                      <small class="text-muted">Followed by</small>
+                    </div>
                   </div>
                 </div>
-              </div>
-          </div>
+            </div>
+          <% end %>
         <% end %>
       </div>
     </aside>
