--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,10 +26,21 @@
     </div>
     <main class="col-sm-7 p-0 bg-light border-right">
       <div class="cover">
-        <%= image_tag(@user.cover) if current_user.image %>
+        <%= image_tag(@user.cover, class: 'cover-img') if current_user.image %>
       </div>
-      <nav class="nav px-5 mb-5 main-nav border-bottom d-flex align-items-center">
-        <%= link_to 'TWEETS', root_path, class: 'nav-link active text-dark px-0' %>
+      <nav class="nav px-5 mb-5 border-bottom d-flex align-items-center">
+        <div class="">
+          <%= link_to 'TWEETS', root_path, class: 'nav-link main-nav active text-dark px-0' %>
+        </div>
+        <div class="ml-auto">
+          <% unless current_user == @user %>
+            <% unless current_user.cannot_follow?(@user) %>
+              <%= button_to 'FOLLOW', {controller: "friendships", action: "create", id: @user.id}, method: :post, class: 'btn btn-outline-primary' %>
+            <% else %>
+              <%= button_to 'UNFOLLOW', {controller: "friendships", action: "destroy", id: @user.id}, method: :delete, class: 'btn btn-outline-danger' %>
+            <% end %>
+          <% end %>
+        </div>
       </nav>
       <div>
         <div class="container px-5">
