--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,14 +3,18 @@
     <nav class="col-sm-2 bg-blue b-bottom py-2">
       <div class="card border-0 bg-transparent">
         <div class="row no-gutters">
-          <div class="col-sm-4 text-center">
-            <%= image_tag(current_user.thumbnail, class: 'header-thumbnail') if current_user %>
-          </div>
-          <div class="col-sm-8 d-flex align-items-center">
-            <div class="card-body py-0 px-0">
-              <h6 class="card-title mb-0 text-white"><%= current_user.fullname.upcase! if current_user %></h6>
+          <% if current_user %>
+            <div class="col-sm-4 text-center">
+              <%= image_tag(current_user.thumbnail, class: 'header-thumbnail') if current_user %>
             </div>
-          </div>
+            <div class="col-sm-8 d-flex align-items-center">
+              <div class="card-body py-0 px-0">
+                <h6 class="card-title mb-0 text-white">
+                  <%=link_to current_user.fullname.upcase!, user_path(current_user), class: 'text-white text-decoration-none' %>
+                </h6>
+              </div>
+            </div>
+          <% end %>
         </div>
       </div>
     </nav>
