--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,15 @@
-<%= form_for(@user, url: signup_path, method: :post) do |f| %>
-    <%= f.label :fullname %>
-    <%= f.text_field :fullname %>
-    </br>
-    <%= f.label :username %>
-    <%= f.text_field :username, class: 'form-control' %>
-    </br>
-    <%= f.submit 'Sign up', class: 'btn btn-primary mb-3'  %>
-<% end %>
+<div class="container" style="max-width: 500px">
+  <h4 class="text-center mt-5">Sign up<h4>
+    <%= form_for(@user, url: signup_path, method: :post) do |f| %>
+      <div class="form-group">
+        <%= f.label :fullname, class: 'h5' %>
+        <%= f.text_field :fullname, class: 'form-control' %>
+      </div>
+      <div class="form-group">
+        <%= f.label :username, class: 'h5' %>
+        <%= f.text_field :username, class: 'form-control' %>
+      </div>
+      <%= f.submit 'Sign up', class: 'btn btn-primary mb-3' %>
+    <% end %>
+    <p class="h6">Already have an account? <%= link_to "Login now!", login_path %></p>
+</div>
