--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -105,7 +105,7 @@
         <h6 class="text-muted pl-2 mb-0"> FOLLOWED BY </h6>
       </div>
       <div class="container py-4">
-        <% @user.followees.each do |user| %>
+        <% @user.followers.each do |user| %>
             <div class="card mb-4 border-0 bg-transparent">
                 <div class="row no-gutters">
                   <div class="col-sm-2">
