--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -1,29 +1,6 @@
 <div class="container-fluid">
   <div class="row" style="min-height: calc(100vh - 72px);">
-    <div class="col-sm-2 b-right bg-blue">
-      <div class="row text-center b-bottom">
-        <div class="col-sm-6 py-2 b-right">
-          <div class="text-white"><%=current_user.followees.count if current_user%></div>
-          <h6 class="text-secondary text-small">Following</h6>
-        </div>
-        <div class="col-sm-6 py-2">
-          <div class="text-white"><%=current_user.followers.count if current_user%></div>
-          <h6 class="text-secondary text-small">Followers</h6>
-        </div>
-      </div>
-      <div class="row">
-        <nav class="w-100">
-          <ul class="list-unstyled">
-            <li class="">
-              <%= link_to 'HOME', root_path, class: 'p-3 color-link' %>
-            </li>
-            <li class="">
-              <%= link_to 'PROFILE', user_path(current_user), class: 'p-3 color-link' %>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </div>
+    <%= render 'shared/leftnav' %>
     <main class="col-sm-7 p-0 bg-light border-right">
       <nav class="nav px-5 mb-5 main-nav border-bottom d-flex align-items-center">
         <%= link_to 'TWEETS', root_path, class: 'nav-link active text-dark px-0' %>
