--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,34 +21,7 @@
       </nav>
       <div>
         <div class="container px-5">
-          <% if current_user?(@user) %>
-            <div class="bg-white border rounded">
-                <h6 class="p-3 m-0 text-muted">TWEET SOMETHING</h6>
-                <%= form_for(:opinion, url: opinions_path, html: {class: 'px-3 pb-3'}) do |f| %>
-                  <div class="form-group">
-                    <%= f.text_field :text, class: 'form-control', placeholder: 'Compose new tweet' %>
-                  </div> 
-                <% end %>
-            </div>
-          <% end %>
-          <div class="bg-white border rounded px-3 py-4 mt-5 mb-5">
-            <h6 class="pb-3 border-bottom text-primary">RECENT TWEETS</h6>
-            <% @opinions.each do |opinion| %>
-              <div class="card mb-3 border-0">
-                <div class="row no-gutters">
-                  <div class="col-3 col-lg-1">
-                    <%= image_tag(@user.thumbnail, class: 'thumbnail') %>
-                  </div>
-                  <div class="col-9 col-lg-11">
-                    <div class="card-body py-0 px-3">
-                      <h6 class="card-title mb-0"><%= @user.fullname %></h6>
-                      <p class="card-text text-muted"><%= opinion.text %></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            <% end %>
-          </div>
+          <%= render 'shared/tweets' %>
         </div>
       </div>
     </main>
