--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,11 +20,12 @@
     </nav>
     <main class="col-sm-10 p-0 py-2 bg-light-blue">
       <nav class="navbar navbar-expand navbar-light p-3">
+        <a href="/" class="mb-0 text-white font-weight-bold text-decoration-none">TALKNOLOGIES</a>
         <div class="collapse navbar-collapse d-flex justify-content-end">
           <ul class="navbar-nav">
             <% if current_user %>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle text-white text-decoration-none" data-toggle="dropdown">
+                <a href="#" class="dropdown-toggle text-dark text-decoration-none" data-toggle="dropdown">
                   ACCOUNT <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right text-center py-0">
