--- a/app/views/shared/_leftnav.html.erb
+++ b/app/views/shared/_leftnav.html.erb
@@ -1,11 +1,12 @@
 <div class="col-sm-2 b-right bg-blue">
+  <% if current_user %>
     <div class="row text-center b-bottom">
     <div class="col-sm-6 py-2 b-right">
-        <div class="text-white"><%=current_user.followees.count if current_user%></div>
+        <div class="text-white"><%=current_user.followees.count%></div>
         <h6 class="text-secondary text-small">Following</h6>
     </div>
     <div class="col-sm-6 py-2">
-        <div class="text-white"><%=current_user.followers.count if current_user%></div>
+        <div class="text-white"><%=current_user.followers.count%></div>
         <h6 class="text-secondary text-small">Followers</h6>
     </div>
     </div>
@@ -21,4 +22,5 @@
         </ul>
     </nav>
     </div>
+  <% end %>
 </div>
