--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,6 +8,9 @@
       <div class="form-group">
         <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png', class: 'btn pl-0' %>
       </div>
+      <div class="form-group">
+        <%= f.file_field :cover, accept: 'image/jpeg,image/gif,image/png', class: 'btn pl-0' %>
+      </div>
       <%= f.submit 'UPDATE', class: "btn btn-primary mt-4" %>
     <% end %>
 </div>
