--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <%= render 'shared/leftnav' %>
     <main class="col-sm-7 p-0 bg-light border-right">
       <div class="cover">
-        <%= image_tag(@user.cover, class: 'cover-img') if current_user.image %>
+        <%= image_tag(@user.cover_photo, class: 'cover-img') if current_user.cover %>
       </div>
       <nav class="nav px-5 mb-5 border-bottom d-flex align-items-center">
         <div class="">
@@ -58,12 +58,12 @@
         <% @user.followers.each do |user| %>
             <div class="card mb-4 border-0 bg-transparent">
                 <div class="row no-gutters">
-                  <div class="col-sm-2">
+                  <div class="col-sm-2 text-center">
                     <%= image_tag(user.thumbnail, class: 'side-thumbnail') %>
                   </div>
                   <div class="col-sm-10">
-                    <div class="card-body py-3 px-4">
-                      <h6 class="card-title mb-0"><%= link_to user.fullname, user_path(user) %></h6>
+                    <div class="card-body p-0">
+                      <h6 class="card-title mb-0"><%= link_to user.fullname, user_path(user), class: 'text-body font-weight-bold text-decoration-none' %></h6>
                       <small class="text-muted">@<%=user.username%></small>
                     </div>
                   </div>
