--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -67,7 +67,7 @@ li a{
 .thumbnail {
     border-radius: 4px;
     border: 1px solid #ddd;
-    padding: 3px;
+    border-radius: 50%;
 }
 
 .side-thumbnail {
