--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,9 +6,13 @@
         <%= f.text_field :fullname, class: 'form-control' %>
       </div>
       <div class="form-group">
+        <%= f.label 'Profile Photo:', class: 'h5 text-extra-small' %>
+        </br>
         <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png', class: 'btn pl-0' %>
       </div>
       <div class="form-group">
+        <%= f.label 'Cover Photo:', class: 'h5 text-extra-small' %>
+        </br>
         <%= f.file_field :cover, accept: 'image/jpeg,image/gif,image/png', class: 'btn pl-0' %>
       </div>
       <%= f.submit 'UPDATE', class: "btn btn-primary mt-4" %>
