refactor: use an icon in header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
             <% if current_user %>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle text-dark text-decoration-none" data-toggle="dropdown">
-                  ACCOUNT <b class="caret"></b>
+                  <i><%= image_tag('gear.png')%></i> <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right text-center py-0">
                   <li>
