--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -1,7 +1,5 @@
-<% provide(:image, 'opinion.author.thumbnail') %>
-
 <div class="container-fluid">
-  <div class="row" style="min-height: calc(100vh - 72px);">
+  <div class="row" style="min-height: calc(100vh - 73px);">
     <%= render 'shared/leftnav' %>
     <main class="col-sm-7 p-0 bg-light border-right">
       <nav class="nav px-5 mb-5 main-nav border-bottom d-flex align-items-center">
@@ -21,22 +19,20 @@
       </div>
       <div class="container py-4">
         <% @users.each do |user| %>
-          <% unless current_user == user %>
-            <% unless current_user.cannot_follow?(user) %>
-              <div class="card mb-4 border-0 bg-transparent">
-                  <div class="row no-gutters">
-                    <div class="col-sm-2 text-center">
-                      <%= image_tag(user.thumbnail, class: 'side-thumbnail') %>
-                    </div>
-                    <div class="col-sm-10">
-                      <div class="card-body p-0">
-                        <h6 class="card-title mb-0"><%= link_to user.fullname, user_path(user), class: 'text-dark font-weight-bold text-decoration-none' %></h6>
-                        <span class="text-muted text-extra-small">@<%=user.username%></span>
-                      </div>
+          <% unless current_user?(user) %>
+            <div class="card mb-4 border-0 bg-transparent">
+                <div class="row no-gutters">
+                  <div class="col-sm-2 text-center">
+                    <%= image_tag(user.thumbnail, class: 'side-thumbnail') %>
+                  </div>
+                  <div class="col-sm-10">
+                    <div class="card-body p-0">
+                      <h6 class="card-title mb-0"><%= link_to user.fullname, user_path(user), class: 'text-dark font-weight-bold text-decoration-none' %></h6>
+                      <span class="text-muted text-extra-small">@<%=user.username%></span>
                     </div>
                   </div>
-              </div>
-            <% end %>
+                </div>
+            </div>
           <% end %>
         <% end %>
       </div>
