refactor query method

--- a/app/views/shared/_leftnav.html.erb
+++ b/app/views/shared/_leftnav.html.erb
@@ -23,7 +23,7 @@
 							<%= link_to 'PROFILE', user_path(current_user), class: 'p-3 color-link' %>
 					</li>
 					<li class="">
-							<%= link_to 'SETTINGS', user_path(current_user), class: 'p-3 color-link' %>
+							<%= link_to 'SETTINGS', edit_user_path(current_user), class: 'p-3 color-link' %>
 					</li>
         </ul>
     </nav>
