--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,7 +30,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right text-center py-0">
                   <li>
-                    <%= link_to 'SETTINGS', edit_user_path(current_user), class: 'text-decoration-none border-bottom dropdown-link py-2' %>
+                    <%= link_to 'SETTINGS', edit_user_path(current_user), class: 'settings text-decoration-none border-bottom dropdown-link py-2' %>
                   </li>
                   <li>
                     <%= link_to 'LOG OUT', logout_path, method: :delete, class: 'text-decoration-none dropdown-link py-2' %>
