--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,6 @@
 
  // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
-@import "custom"
+@import "custom";
+@import "font-awesome-sprockets";
+@import "font-awesome";
