--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,20 +1,29 @@
-<div class="container" style="max-width: 500px">
-  <h4 class="text-center my-5">Update Information<h4>
-    <%= form_for(@user) do |f| %>
-      <div class="form-group">
-        <%= f.label :fullname, class: 'h6' %>
-        <%= f.text_field :fullname, class: 'form-control' %>
+<div class="container-fluid">
+  <div class="row" style="min-height: calc(100vh - 73px);">
+    <%= render 'shared/leftnav' %>
+    <main class="col-sm-10 p-0 bg-light border-right">
+      <div class="container px-5">
+        <div class="container" style="max-width: 500px">
+          <h4 class="text-center my-5">Update Information<h4>
+          <%= form_for(@user) do |f| %>
+            <div class="form-group">
+              <%= f.label :fullname, class: 'h6' %>
+              <%= f.text_field :fullname, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label 'Profile Photo:', class: 'h5 text-extra-small' %>
+              </br>
+              <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png', class: 'btn pl-0' %>
+            </div>
+            <div class="form-group">
+              <%= f.label 'Cover Photo:', class: 'h5 text-extra-small' %>
+              </br>
+              <%= f.file_field :cover, accept: 'image/jpeg,image/gif,image/png', class: 'btn pl-0' %>
+            </div>
+            <%= f.submit 'UPDATE', class: "btn btn-primary mt-4" %>
+          <% end %>
+        </div>
       </div>
-      <div class="form-group">
-        <%= f.label 'Profile Photo:', class: 'h5 text-extra-small' %>
-        </br>
-        <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png', class: 'btn pl-0' %>
-      </div>
-      <div class="form-group">
-        <%= f.label 'Cover Photo:', class: 'h5 text-extra-small' %>
-        </br>
-        <%= f.file_field :cover, accept: 'image/jpeg,image/gif,image/png', class: 'btn pl-0' %>
-      </div>
-      <%= f.submit 'UPDATE', class: "btn btn-primary mt-4" %>
-    <% end %>
+    </main>
+  </div>
 </div>
