--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,12 +5,12 @@
         <div class="row no-gutters">
           <% if current_user %>
             <div class="col-sm-4 text-center">
-              <%= image_tag(current_user.thumbnail, class: 'header-thumbnail') if current_user %>
+              <%= image_tag(current_user.profile, class: "header-thumbnail") if current_user %>
             </div>
             <div class="col-sm-8 d-flex align-items-center">
               <div class="card-body py-0 px-0">
                 <h6 class="card-title mb-0 text-white">
-                  <%=link_to current_user.fullname.upcase!, user_path(current_user), class: 'text-white text-decoration-none' %>
+                  <%= link_to current_user.fullname.sub(/\S/, &:upcase), user_path(current_user), class: "text-white text-decoration-none" %>
                 </h6>
               </div>
             </div>
@@ -25,15 +25,15 @@
           <ul class="navbar-nav">
             <% if current_user %>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle text-dark text-decoration-none" data-toggle="dropdown">
-                  <i><%= image_tag('gear.png')%></i> <b class="caret"></b>
+                <a href="#" class="dropdown-toggle text-white text-decoration-none" data-toggle="dropdown">
+                  <%= icon("fas", "user-cog", class: "pr-1 text-white") %> <b class="caret"></b>
                 </a>
-                <ul class="dropdown-menu dropdown-menu-right text-center py-0">
+                <ul class="dropdown-menu dropdown-menu-right py-0">
                   <li>
-                    <%= link_to 'SETTINGS', edit_user_path(current_user), class: 'settings text-decoration-none border-bottom dropdown-link py-2' %>
+                    <%= link_to "Edit my account", edit_user_path(current_user), class: "settings text-decoration-none border-bottom dropdown-link p-2" %>
                   </li>
                   <li>
-                    <%= link_to 'LOG OUT', logout_path, method: :delete, class: 'text-decoration-none dropdown-link py-2' %>
+                    <%= link_to "Log out", logout_path, method: :delete, class: "text-decoration-none dropdown-link p-2" %>
                   </li>
                 </ul>
               </li>
