--- a/app/views/shared/_leftnav.html.erb
+++ b/app/views/shared/_leftnav.html.erb
@@ -2,11 +2,11 @@
   <% if current_user %>
     <div class="row text-center b-bottom">
     <div class="col-sm-6 py-2 b-right">
-        <div class="text-white"><%=current_user.followees.count%></div>
+        <div class="text-white"><%= current_user.followees.count %></div>
         <h6 class="text-secondary text-small">Following</h6>
     </div>
     <div class="col-sm-6 py-2">
-        <div class="text-white"><%=current_user.followers.count%></div>
+        <div class="text-white"><%= current_user.followers.count %></div>
         <h6 class="text-secondary text-small">Followers</h6>
     </div>
     </div>
@@ -14,23 +14,23 @@
     <nav class="w-100">
         <ul class="list-unstyled">
           <li class="">
-            <%= link_to root_path, class: 'p-3 color-link' do %>
-              <%= icon('fas', 'home', class: 'pr-1') %> HOME
+            <%= link_to root_path, class: "p-3 color-link" do %>
+              <%= icon("fas", "home", class: "pr-1") %> HOME
             <% end %>
 					</li>
           <li class="">
-            <%= link_to users_path, class: 'p-3 color-link' do %>
-              <%= icon('fas', 'hashtag', class: 'pr-1') %> DISCOVER
+            <%= link_to users_path, class: "p-3 color-link" do %>
+              <%= icon("fas", "plug", class: "pr-1") %> CONNECT
             <% end %>
 					</li>
           <li class="">
-            <%= link_to user_path(current_user), class: 'p-3 color-link' do %>
-              <%= icon('fas', 'user', class: 'pr-1') %> PROFILE
+            <%= link_to user_path(current_user), class: "p-3 color-link" do %>
+              <%= icon("fas", "user", class: "pr-1") %> PROFILE
             <% end %>
 					</li>
           <li class="">
-            <%= link_to edit_user_path(current_user), class: 'p-3 color-link' do %>
-              <%= icon('fas', 'cog', class: 'pr-1') %> SETTINGS
+            <%= link_to edit_user_path(current_user), class: "p-3 color-link" do %>
+              <%= icon("fas", "cog", class: "pr-1") %> SETTINGS
             <% end %>
 					</li>
         </ul>
