--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,15 @@
 <div class="container-fluid">
   <div class="row">
-    <nav class="col-sm-2 bg-blue b-bottom py-2">
+    <nav class="col-sm-2 bg-blue b-bottom d-flex align-items-center justify-content-center">
       <div class="card border-0 bg-transparent">
-        <div class="row no-gutters">
+        <div class="row ">
           <% if current_user %>
             <div class="col-sm-4 text-center">
-              <%= image_tag(current_user.profile, class: "header-thumbnail") if current_user %>
+              <%= image_tag(current_user.profile, class: "header-thumbnail") %>
             </div>
             <div class="col-sm-8 d-flex align-items-center">
               <div class="card-body py-0 px-0">
-                <h6 class="card-title mb-0 text-white">
+                <h6 class="card-title mb-0 text-white text-center">
                   <%= link_to current_user.fullname.sub(/\S/, &:upcase), user_path(current_user), class: "text-white text-decoration-none" %>
                 </h6>
               </div>
