--- a/app/views/shared/_tweets.html.erb
+++ b/app/views/shared/_tweets.html.erb
@@ -25,8 +25,16 @@
                 </div>
                 <div class="w-100">
                     <ul class="list-unstyled d-flex justify-content-around mb-2">
-                        <li class="text-muted like"><%= icon("far", "heart", class: "pr-1") %>0 Likes</li>
-                        <li class="text-muted"><%= icon("far", "comment", class: "pr-1") %>0 Comments</li>
+                        <li class="like">
+                            <%= link_to root_path, class: "text-decoration-none text-muted" do %>
+                                <%= icon("far", "heart", class: "pr-1") %>0 Likes
+                            <% end %>
+                        </li>
+                        <li class="text-muted">
+                            <%= link_to root_path, class: "text-decoration-none text-muted" do %>
+                                <%= icon("far", "comment", class: "pr-1") %>0 Comments
+                            <% end %>
+                        </li>
                     </ul>
                 </div>
             </div>
