feat: use ajax to update for like and dislike actions

--- a/app/views/shared/_tweets.html.erb
+++ b/app/views/shared/_tweets.html.erb
@@ -25,7 +25,7 @@
                 </div>
                 <div class="w-100">
                     <ul class="list-unstyled d-flex justify-content-around mb-2">
-                        <li class="like d-flex text-muted">
+                        <li class="like-<%= opinion.id%> d-flex text-muted">
                             <%= like_or_dislike(opinion) %> 
                             <%= num_of_likes(opinion) %>
                         </li>
