--- a/app/views/shared/_tweets.html.erb
+++ b/app/views/shared/_tweets.html.erb
@@ -31,7 +31,7 @@
                         </li>
                         <li class="text-muted">
                             <%= link_to root_path, class: "text-decoration-none text-muted" do %>
-                                <%= icon("far", "comment", class: "pr-1") %>0 Comments
+                                <%= icon("far", "comment", class: "pr-1") %> 0
                             <% end %>
                         </li>
                     </ul>
