--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,8 +22,8 @@
 												</h6>
 											</div>
 									</div>
-									<div class="col-3 col-lg-2 d-flex align-items-center justify-content-end">
-										<%= render 'follow', user: user  %>
+									<div class="user-<%= user.id %> col-3 col-lg-2 d-flex align-items-center justify-content-end">
+										<%= render 'shared/follow', user: user  %>
 									</div>
 							</div>
 						</div>
