feat: fixed left and top nav

--- a/app/views/shared/_leftnav.html.erb
+++ b/app/views/shared/_leftnav.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-2 b-right bg-blue">
+<div class="b-right bg-blue left-nav">
   <% if current_user %>
     <div class="row text-center b-bottom">
     <div class="col-sm-6 py-2 b-right">
