--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row" style="min-height: calc(100vh - 73px);">
     <%= render 'shared/leftnav' %>
-    <main class="col-sm-10 p-0 bg-light border-right">
+    <main class="col-sm-10 p-0 bg-light border-right main-content">
       <div class="container px-5">
         <div class="container" style="max-width: 500px">
           <h4 class="text-center my-5">Update Information<h4>
