--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row" style="min-height: calc(100vh - 73px);">
     <%= render 'shared/leftnav' %>
-    <main class="col-sm-7 p-0 bg-light border-right">
+    <main class="col-sm-7 p-0 bg-light border-right main-content">
       <nav class="nav px-5 mb-5 main-nav border-bottom d-flex align-items-center">
         <%= link_to 'DISCOVER', users_path, class: 'nav-link active text-dark px-0' %>
       </nav>
