--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -91,3 +91,27 @@ li a {
 .fa-heart {
   color: #e0245e;
 }
+
+.top-nav {
+  position: fixed;
+  z-index: 2;
+}
+
+.left-nav {
+  background-color: #213245;
+  width: 16.666%;
+  margin-top: 72px;
+  height: 100%;
+  padding: 0 15px;
+  position: fixed;
+  z-index: 2;
+}
+
+.main-content {
+  margin-left: 16.666%;
+  margin-top: 72px;
+}
+
+.right-nav {
+  margin-top: 72px;
+}
