--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid top-nav">
   <div class="row">
     <nav class="col-sm-2 bg-blue b-bottom d-flex align-items-center justify-content-center">
       <div class="card border-0 bg-transparent">
