--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row" style="min-height: calc(100vh - 73px);">
     <%= render "shared/leftnav" %>
-    <main class="col-sm-7 p-0 bg-light border-right">
+    <main class="col-sm-7 p-0 bg-light border-right main-content">
       <nav class="nav px-5 mb-5 main-nav border-bottom d-flex align-items-center">
         <%= link_to "POSTS", root_path, class: "nav-link active text-dark px-0" %>
       </nav>
@@ -11,7 +11,7 @@
         </div>
       </div>
     </main>
-    <aside class="col-sm-3 bg-light">
+    <aside class="col-sm-3 right-nav bg-light">
       <div class="main-nav border-bottom d-flex align-items-center">
         <div class="">
           <a class="text-muted" href="#">WHO TO FOLLOW</a>
