bug: add some padding to login and signup page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="max-width: 500px">
+<div class="container pt-5" style="max-width: 500px">
   <h4 class="text-center mt-5">Sign up<h4>
     <%= form_for(@user, url: signup_path, method: :post) do |f| %>
       <div class="form-group">
